--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/chart.js": "^2.9.41",
     "angular-animate": "^1.8.3",
     "angular-aria": "^1.8.3",
     "angular-material": "^1.2.5",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "flag-icon-css": "^4.1.7",
+    "ng-chartjs": "^0.2.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
