--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
     "@types/body-parser": "^1.19.5",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.12",
     "jasmine-core": "~4.5.0",
