--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "flag-icon-css": "^4.1.7",
+    "jwt-decode": "^4.0.0",
     "ng-chartjs": "^0.2.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
