--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "flag-icon-css": "^4.1.7",
     "jwt-decode": "^4.0.0",
     "ng-chartjs": "^0.2.8",
+    "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
