--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "package-name": "^0.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
