--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@angular/service-worker": "^15.2.10",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@types/chart.js": "^2.9.41",
     "angular-animate": "^1.8.3",
     "angular-aria": "^1.8.3",
@@ -43,6 +44,7 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~4.5.0",
