--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-material": "^1.2.5",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
+    "file-saver": "^2.0.5",
     "flag-icon-css": "^4.1.7",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
@@ -45,6 +46,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.0",
     "@types/chart.js": "^2.9.41",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~4.5.0",
