--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^17.3.6",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
     "package-name": "^0.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +38,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.12",
+    "@types/leaflet": "^1.9.12",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
