--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet-search": "^4.0.0",
     "typescript": "~4.9.4"
   }
 }
