--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/leaflet/dist/leaflet.css" 
+              "node_modules/leaflet/dist/leaflet.css" ,
+              "./node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css"
             ],
             "scripts": [
               "node_modules/leaflet/dist/leaflet.js" 
