--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@types/body-parser": "^1.19.5",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
