--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,18 @@
               "src/assets"
             ],
             "styles": [
+              
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css"
+
+              
+              
+ 
+              
             ],
             "scripts": []
           },
