--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/leaflet-routing-machine": "^3.2.8",
     "jasmine-core": "~4.5.0",
+    "jspdf": "^2.5.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
