--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,12 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css"
+
             ],
             "scripts": [],
             "serviceWorker": true,
