--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "leaflet-routing-machine": "^3.2.12",
         "leaflet-search": "^4.0.0",
         "ng-chartjs": "^0.2.8",
+        "ng2-charts": "^4.1.1",
         "ngx-cookie-service": "^17.1.0",
         "ngx-pagination": "^6.0.3",
         "ngx-translate": "^0.0.1-security",
